--- a/.gitignore
+++ b/.gitignore
@@ -175,3 +175,4 @@ src/data/Regulatory Statute Documents Set 2
 src/data/Regulatory Statute Documents Set 1
 src/data/all_files.parquet
 src/test.ipynb
+src/data/text_data.parquet
