add download util; update data/readme.md;

--- a/.gitignore
+++ b/.gitignore
@@ -169,7 +169,7 @@ $RECYCLE.BIN/
 # .nfs files are created when an open file is removed but is still being accessed
 .nfs*
 
-/data/
+/data/*/
 node_modules/
 *.db
 *.log
