checking files numebr

--- a/.gitignore
+++ b/.gitignore
@@ -170,9 +170,9 @@ $RECYCLE.BIN/
 .nfs*
 
 src/data/all_documents
-src/data/Regulatory Statute Documents Set 3
-src/data/Regulatory Statute Documents Set 2
-src/data/Regulatory Statute Documents Set 1
+src/data/规范性文件1
+src/data/规范性文件1
+src/data/规范性文件1
 src/data/text_data.parquet
 src/data/policies-0318.db.bkp.db
 src/data/Mapping.csv
