--- a/.gitignore
+++ b/.gitignore
@@ -173,7 +173,15 @@ src/data/all_documents
 src/data/Regulatory Statute Documents Set 3
 src/data/Regulatory Statute Documents Set 2
 src/data/Regulatory Statute Documents Set 1
+src/data/规范性文件1
+src/data/规范性文件2
+src/data/规范性文件3
 src/data/all_files.parquet
 src/test.ipynb
 src/data/text_data.parquet
 src/data/dara_error_log.txt
+src/data/Mapping.csv
+src/data/Mapping.xlsx
+src/offload_folder
+
+data/*/
