fixed git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -169,37 +169,13 @@ $RECYCLE.BIN/
 # .nfs files are created when an open file is removed but is still being accessed
 .nfs*
 
+data/*/
+node_modules/
+*.zip
+*.db
+*.log
+*.sqlite
+origin/*/
+
 src/data/*
 src/offload_folder/*
-
-data/AnHui
-data/BeiJing
-data/ChongQing
-data/FuJian
-data/GanSu
-data/GuangDong
-data/GuangXi
-data/GuiZhou
-data/HaiNan
-data/HeBei
-data/HeiLongJiang
-data/HeNan
-data/HuBei
-data/HuNan
-data/JiangSu
-data/JiangXi
-data/JiLin
-data/LiaoNing
-data/NeiMeng
-data/NingXia
-data/QingHai
-data/ShaanXi
-data/ShanDong
-data/ShangHai
-data/ShanXi
-data/SiChuan
-data/TianJin
-data/XinJiang
-data/XiZang
-data/YunNan
-data/ZheJiang
