--- a/task-b/collect/package.json
+++ b/task-b/collect/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.6.7",
     "better-sqlite3": "^9.4.3",
-    "cheerio": "^1.0.0-rc.12"
+    "cheerio": "^1.0.0-rc.12",
+    "https-proxy-agent": "^7.0.4"
   }
 }
